--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+h1{
+	background-color:#011e29;
+	color:white;
+	text-align:center;
+	margin:0px;
+	padding:15px
+}
+body{
+	background-color:#f5f5f5;
+	
+}
